# Bachelorprojekt-Hartree-Fock-HF-from-scratch

./: README.md
Bachelorprojekt/: CMakeLists.txt  main.cpp
Bachelorprojekt/include/: Atom.h  AtomicNumber.h  CI.h  DIIS.h  HF.h  Molecule.h  TDHF.h
Bachelorprojekt/input/12formaldehyd-STO-3G/: 0NOTE.txt
Bachelorprojekt/input/14h2o-DZ/: geom.xyz
Bachelorprojekt/input/19allene-STO-3G/: basis.txt  geom.xyz
Bachelorprojekt/input/22water-631PGS/: basis.txt
Bachelorprojekt/input/25water-DZP/: geom.xyz
Bachelorprojekt/input/48formaldehyde631ppgss/: basis.txt  geom.xyz
Bachelorprojekt/input/9ch4-STO-3G/: geom.xyz
Bachelorprojekt/output/: 12mp2.txt  14mp2.txt  19mp2.txt  22mp2.txt  34mp2.txt  40mp2.txt  48mp2.txt  58mp2.txt  82mp2.txt  9mp2.txt  axialcyclohex.txt  butan.txt  diisdiffuse.txt  diiserrorvector.txt  eqcyclohex.txt  ethan.txt  formcis.txt  h2osingles.txt  methan.txt  polarizabilities.txt  propan.txt  propandalton.txt  propandynpol.txt  propandynpol2.txt  waterdip.txt  watersto3g.txt
Bachelorprojekt/sources/: Atom.cpp  AtomicNumber.cpp  CI.cpp  CMakeLists.txt  DIIS.cpp  HF.cpp  Molecule.cpp  TDHF.cpp
